# python-dev-gubanov-ivan

./: .dockerignore  .env.example  .ignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
dumps/: app.sql  logs.sql
migrations/: env.py
migrations/app-versions/: 0420136097c6_add_comments_table.py  5542d58a62ca_init.py
migrations/logs-versions/: 35e1e49b74b8_add_user_id_index.py  4721c4ef036b_init.py
migrations/versions/: 9fc874e69ed1_init.py
src/api/: app.py  settings.py
src/api/adapters/database/: engines.py
src/api/adapters/database/orm/: app.py  logs.py
src/api/adapters/orm/: app.py  logs.py
src/api/adapters/repositories/: __init__.py  comments.py  general.py  statistics.py  users.py
src/api/application/: fetch_comments_dataset.py  fetch_general_dataset.py  fetch_statistics_dataset.py  interactor.py
src/api/application/common/repositories/: __init__.py  comments.py  general.py  statistics.py  users.py
src/api/di/: __init__.py  container.py
src/api/di/providers/: __init__.py  interactors_provider.py  repositories_provider.py  settings_provider.py  sqlalchemy_provider.py
src/api/presentations/: endpoints.py
src/cli/: main.py  mocks.py
src/cli/factories/: app.py  logs.py
src/farpost-test-assignment/adaptests/orm/: app.py  base.py  logs.py
tests/: conftest.py  test_endpoints.py
